infrastructure/prod/kubernetes/storage-service-manifests/storage-service-deployment-v1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service-v1.0
  namespace: prod
  labels:
    app: storage-service
    version: v1.0
spec:
  selector:
    matchLabels:
      app: storage-service
      version: v1.0
  template:
    metadata:
      name: storage-service-v1.0
      labels:
        app: storage-service
        version: v1.0
    spec:
      imagePullSecrets: # Setting credentials to Azure Container Registry, synchronized with Key Vault
        - name: azurecr-credentials
      containers:
        - name: storage-service
          image: storage-service:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            runAsUser: 1001 # Created user in Docker image
            runAsGroup: 1001
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
      serviceAccountName: storage-service
      restartPolicy: Always
