infrastructure/prod/kubernetes/storage-service-manifests/storage-service-network-policy-v1.0.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storage-service-v1.0
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: storage-service
      version: v1.0
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080  # Service HTTP port
  egress:
    - ports:
        - protocol: TCP
          port: 5672  # Default RabbitMQ broker port
